# cn-lsp-server

./: .editorconfig  .gitignore  .gitmodules  LICENCE  Makefile  README.md  THIRD_PARTY_FILES.md  cn-lsp-server.opam  dune  dune-project
.github/workflows/: build-and-test.yml
cn-lsp-server/src/: cn.ml  cn_lsp_server.ml  diagnostics.mli  doc_to_md.ml  document.ml  document.mli  dune  fmt.ml  fmt.mli  inference.ml  loc.ml  query_protocol.ml  state.mli
cn-lsp-server/src/code_actions/: action_construct.ml  action_destruct.ml  action_refactor_open.ml  action_type_annotate.ml
cn-lsp-server/src/custom_requests/: req_typed_holes.ml  req_wrapping_ast_node.ml
cn-lsp-server/test/e2e/: jest.config.js
cn-lsp-server/test/e2e/__tests__/: TextDocument.test.ts  textDocument-diagnostics.test.ts
cn-lsp-server/test/e2e/src/: LanguageServer.ts
etc/: BSD-2-Clause  headache_config
lsp-fiber/src/: import.ml
src/: bin.ml  bin.mli  client.ml  client.mli  cn.ml  cn_lsp_server.ml  cn_lsp_server.mli  compl.ml  compl.mli  configuration.ml  configuration.mli  diagnostics.ml  diagnostics.mli  doc_to_md.ml  doc_to_md.mli  document.ml  document.mli  document_store.ml  document_store.mli  document_symbol.ml  document_symbol.mli  dune  dune.ml  dune.mli  fmt.ml  fmt.mli  import.ml  inference.ml  inference.mli  lazy_fiber.ml  lazy_fiber.mli  loc.ml  loc.mli  main.ml  mpipeline.ml  mpipeline.mli  msource.ml  msource.mli  position.ml  position.mli  (+12 more)
src/code_actions/: action_construct.ml  action_construct.mli  action_destruct.ml  action_destruct.mli  action_inferred_intf.ml  action_inferred_intf.mli  action_refactor_open.ml  action_refactor_open.mli  action_type_annotate.ml  action_type_annotate.mli  code_action.ml
src/custom_requests/: custom_request.ml  custom_request.mli  req_infer_intf.ml  req_infer_intf.mli  req_switch_impl_intf.ml  req_switch_impl_intf.mli  req_typed_holes.ml  req_typed_holes.mli  req_wrapping_ast_node.ml  req_wrapping_ast_node.mli
test/e2e/: .prettierignore  .prettierrc  dune  jest.config.js  package.json
test/e2e/__old__/: completionItem-resolve.test.ts  ocamllsp-inferIntf.ts  ocamllsp-switchImplIntf.ts  ocamllsp-typedHoles.ts  ocamllsp-wrappingAstNode.test.ts  textDocument-codeAction.test.ts  textDocument-codeLens.test.ts  textDocument-completion.test.ts  textDocument-declaration.test.ts  textDocument-definition.test.ts  textDocument-diagnostics.ts  textDocument-documentHighlight.test.ts  textDocument-documentSymbol.ts  textDocument-foldingRange.test.ts  textDocument-formatting.test.ts  textDocument-hover.test.ts  textDocument-references.test.ts  textDocument-rename.test.ts  textDocument-selectionRange.test.ts  textDocument-signatureHelp.ts  textDocument-typeDefinition.test.ts  workspace-symbol.test.ts
test/e2e/__tests__/: Lifecycle.test.ts  Request.Debug.test.ts  TextDocument.test.ts  textDocument-diagnostics.test.ts
test/e2e/__tests__/declaration_files/: dune
test/e2e/__tests__/workspace_symbol_A/lib/: dune
test/e2e/__tests__/workspace_symbol_B/: dune
test/e2e/src/: LanguageServer.ts
